# advent-of-spin-23

./: Cargo.toml  README.md
challenge-1/: Cargo.toml  spin.toml
challenge-1/src/: lib.rs
challenge-1/static/: index.html
