[package]
name = "challenge"
authors = ["DanStough <Daniel.Stough@gmail.com>"]
description = "advent of spin challenge 1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
# cow = "0.0.8"
http = "0.2"
# serde = { version = "1.0.193", features = ["derive"] }
# serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
url = "2.5.0"

[workspace]
